# Android-firewall

./: .gitattributes  .gitignore  build.gradle.kts  build_log.txt  compile_log.txt  gradle.properties  gradlew  gradlew.bat  implementation_plan.md  settings.gradle.kts
.github/workflows/: android.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rules.conf
app/src/main/cpp/: CMakeLists.txt  aegis_jni.cpp  android_compat.hpp  android_packet_parser.cpp  android_process_resolver.cpp
app/src/main/cpp/firewall_core/include/: api_server.hpp  bvudp.hpp  chain_ledger.hpp  config_parser.hpp  control_plane.hpp  dpi_engine.hpp  logger.hpp  nfq_capture.hpp  packet.hpp  platform.hpp  port_demux.hpp  port_scan_detector.hpp  process_monitor.hpp  ring_buffer.hpp  rule_engine.hpp  sha256.hpp  types.hpp  win_packet.hpp
app/src/main/cpp/firewall_core/src/: config_parser.cpp  dpi_engine.cpp  logger.cpp  packet.cpp  port_scan_detector.cpp  rule_engine.cpp
app/src/main/java/com/asd/firewall/: AegisVpnService.kt  AppPolicyManager.kt  BootReceiver.kt  FirewallEngine.kt  ThreatNotificationManager.kt
app/src/main/java/com/asd/firewall/db/: FirewallDatabase.kt
app/src/main/java/com/asd/firewall/receivers/: NotificationActionReceiver.kt
app/src/main/java/com/asd/firewall/ui/: MainActivity.kt
app/src/main/java/com/asd/firewall/ui/screens/: AnomaliesScreen.kt  AppFirewallScreen.kt  ConnectionsScreen.kt  DashboardScreen.kt  LedgerScreen.kt  PacketsScreen.kt  ProcessesScreen.kt  ReportScreen.kt  RulesScreen.kt  SettingsScreen.kt  ThreatMapScreen.kt  ThreatsScreen.kt  WelcomeScreen.kt
app/src/main/java/com/asd/firewall/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/asd/firewall/ui/viewmodel/: FirewallUiState.kt  FirewallViewModel.kt
app/src/main/java/com/asd/firewall/workers/: DbCleanupWorker.kt  ThreatSyncWorker.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
logs/: 0_Build Debug APK.txt
logs/Build Debug APK/: 19_Post Set up JDK 17.txt  1_Set up job.txt  20_Post Checkout repository.txt  21_Complete job.txt  2_Checkout repository.txt  3_Set up JDK 17.txt  4_Setup Android SDK.txt  5_Grant Gradle wrapper execute permission.txt  6_Cache Gradle packages.txt  7_Build Debug APK.txt  system.txt
